--- a/src/Components/navbar/style.css
+++ b/src/Components/navbar/style.css
@@ -7,11 +7,16 @@
 .wrapper nav {
   position: sticky;
   display: flex;
-  max-width: calc(100% - 200px);
+  max-width: calc(100% - 400px);
   margin: 0 auto;
-  height: 70px;
+  height: 90px;
   align-items: center;
   justify-content: space-between;
+}
+@media screen and (max-width: 1500px) {
+  .wrapper nav {
+    max-width: calc(100% - 100px);
+  }
 }
 nav .content {
   display: flex;
@@ -22,21 +27,13 @@ nav .content .links {
   display: flex;
   align-items: center;
 }
-.logo a {
-  color: #333;
-  font-size: 30px;
-  font-weight: 600;
-}
-.light {
-  color: #fff !important;
-}
 
 .content .links li {
   list-style: none;
   line-height: 70px;
 }
 .content .links li a {
-  color: #333;
+  color: #fff;
   font-size: 18px;
   font-weight: 500;
   padding: 9px 17px;
@@ -44,58 +41,31 @@ nav .content .links {
   transition: all 0.3s ease;
 }
 .header__lg-btn {
-  color: #333;
-  background: transparent;
-  border: 2px solid #333;
-  padding: 1rem 3rem;
-  border-radius: 6px;
-  font-size: 16px;
-  font-family: "Public Sans";
-  font-weight: 600;
-  margin-inline: 1.875rem;
-}
-.header__lg-btndk {
+  border: none;
   color: #fff;
   background: transparent;
-  border: 2px solid #fff;
-  padding: 1rem 3rem;
-  border-radius: 6px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  border-radius: 20px;
   font-size: 16px;
-  font-family: "Public Sans";
-  font-weight: 600;
+  font-family: "Manrope";
+  font-weight: 500;
   margin-inline: 1.875rem;
 }
-
-.header__lg-btn:hover,
-.header__lg-btndk:hover {
-  background: #283341;
-  color: #fff;
+.dark {
+  color: #000000 !important;
 }
 .header__oa-btn {
-  color: #333;
-  background: transparent;
-  border: 2px solid #333;
-  padding: 1rem 2rem;
-  border-radius: 6px;
-  font-size: 1.6rem;
-  font-family: "Public Sans";
-  font-weight: 600;
-}
-.header__oa-btndk {
   color: #fff;
-  background: transparent;
-  border: 2px solid #fff;
+  background: #ff4820;
+  border: none;
   padding: 1rem 2rem;
-  border-radius: 6px;
+  border-radius: 4px;
   font-size: 1.6rem;
-  font-family: "Public Sans";
-  font-weight: 600;
+  font-family: "Manrope", sans-serif;
+  font-weight: 500;
 }
-.header__oa-btn:hover,
-.header__oa-btndk:hover {
-  background: #283341;
-  color: #fff;
-}
+
 .content .links li label {
   color: #fff;
   font-size: 18px;
@@ -107,14 +77,14 @@ nav .content .links {
 .content .links li label {
   display: none;
 }
-.content .links li a:hover,
+/* .content .links li a:hover,
 .content .links li label:hover {
   background: #323c4e;
   color: #fff;
-}
-.wrapper .search-icon,
+} */
+
 .wrapper .menu-icon {
-  color: #333;
+  color: #fff;
   font-size: 18px;
   cursor: pointer;
   line-height: 70px;
@@ -124,50 +94,7 @@ nav .content .links {
 .wrapper .menu-icon {
   display: none;
 }
-.wrapper #show-search:checked ~ .search-icon i::before {
-  content: "\f00d";
-}
 
-.wrapper .search-box {
-  position: absolute;
-  height: 100%;
-  max-width: calc(100% - 50px);
-  width: 100%;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s ease;
-}
-.wrapper #show-search:checked ~ .search-box {
-  opacity: 1;
-  pointer-events: auto;
-}
-.search-box input {
-  width: 100%;
-  height: 100%;
-  border: none;
-  outline: none;
-  font-size: 17px;
-  color: #fff;
-  background: #171c24;
-  padding: 0 100px 0 15px;
-}
-.search-box input::placeholder {
-  color: #f2f2f2;
-}
-.search-box .go-icon {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  line-height: 60px;
-  width: 70px;
-  background: #171c24;
-  border: none;
-  outline: none;
-  color: #fff;
-  font-size: 20px;
-  cursor: pointer;
-}
 .wrapper input[type="checkbox"] {
   display: none;
 }
@@ -226,9 +153,15 @@ nav .content .links {
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1350px) {
   .wrapper nav {
     flex-direction: row-reverse;
+  }
+  nav .content {
+    position: absolute;
+  }
+  nav .logo a img {
+    width: 80%;
   }
   .wrapper .menu-icon {
     display: block;
@@ -236,11 +169,7 @@ nav .content .links {
   .wrapper #show-menu:checked ~ .menu-icon i::before {
     content: "\f00d";
   }
-  .header__lg-btn,
-  .header__oa-btn {
-    color: #fff;
-    border: 2px solid #fff;
-  }
+
   nav .content .links {
     display: block;
     position: fixed;
@@ -255,6 +184,7 @@ nav .content .links {
     padding-bottom: 100px;
     transition: all 0.3s ease;
   }
+
   nav #show-menu:checked ~ .content .links {
     right: 0%;
   }
@@ -303,6 +233,9 @@ nav .content .links {
 @media screen and (max-width: 400px) {
   .wrapper nav {
     padding: 0 10px;
+  }
+  nav .logo a img {
+    width: 70%;
   }
   .content .logo a {
     font-size: 27px;
