--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,2 @@
 @import "mixins", "global", "home", "kyc", "tradingGlossary", "allinstruments",
-  "about", "webtrade", "accTypes", "comparision";
+  "about", "webtrade", "accTypes", "comparision", "commissions", "cfd", "footer";
