--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,6 +1,7 @@
 .button-container {
   display: flex;
   margin-block: 4rem;
+  justify-content: center;
 }
 .button1 {
   font-family: "Rubik", sans-serif;
