--- a/src/Components/navbar/style.css
+++ b/src/Components/navbar/style.css
@@ -44,11 +44,9 @@ nav .content .links {
   border: none;
   color: #fff;
   background: transparent;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
   border-radius: 20px;
-  font-size: 16px;
-  font-family: "Manrope";
+  font-size: 18px;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   margin-inline: 1.875rem;
 }
@@ -57,12 +55,12 @@ nav .content .links {
 }
 .header__oa-btn {
   color: #fff;
-  background: #ff4820;
+  background: linear-gradient(180deg, #ed589f 0%, #5b3ec1 100%);
   border: none;
   padding: 1rem 2rem;
   border-radius: 4px;
-  font-size: 1.6rem;
-  font-family: "Manrope", sans-serif;
+  font-size: 18px;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
 }
 
@@ -176,7 +174,7 @@ nav .content .links {
     background: #14181f;
     height: 100%;
     width: 100%;
-    top: 70px;
+    top: 115px;
     right: -100%;
     margin-left: 0;
     max-width: 350px;
