--- a/src/scss/_allinstruments.scss
+++ b/src/scss/_allinstruments.scss
@@ -5,14 +5,14 @@
 
   &__wrapper {
     padding: 25rem 20rem;
-    @media screen and (max-width: 1500px) {
-      padding: 20rem 5rem;
+    @media screen and (max-width: 1700px) {
+      padding: 20rem 3rem;
     }
-    @include breakpoint-down(medium) {
-      padding: 20rem 4rem;
+    @include breakpoint-down(tab) {
+      padding: 20rem 2rem;
     }
-    @include breakpoint-down(small) {
-      padding: 15rem 2rem;
+    @include breakpoint-down(mobile) {
+      padding: 15rem 1rem;
     }
   }
   &__heading {
@@ -28,10 +28,10 @@
       @media screen and (max-width: 1400px) {
         font-size: 5rem;
       }
-      @include breakpoint-down(medium) {
+      @include breakpoint-down(tab) {
         font-size: 4.5rem;
       }
-      @include breakpoint-down(small) {
+      @include breakpoint-down(mobile) {
         font-size: 3rem;
       }
     }
@@ -42,10 +42,10 @@
       position: relative;
       left: 50%;
       transform: translateX(-50%);
-      @include breakpoint-down(medium) {
+      @include breakpoint-down(tab) {
         width: 30rem;
       }
-      @include breakpoint-down(small) {
+      @include breakpoint-down(mobile) {
         width: 20rem;
       }
     }
@@ -54,10 +54,10 @@
       line-height: 30px;
       margin-top: 2rem;
       color: #fff;
-      @include breakpoint-down(medium) {
+      @include breakpoint-down(tab) {
         text-align: center;
       }
-      @include breakpoint-down(small) {
+      @include breakpoint-down(mobile) {
         font-size: 1.3rem;
       }
     }
@@ -91,7 +91,7 @@
         font-weight: 500;
         margin-right: 5rem;
         text-transform: uppercase;
-        @include breakpoint-down(small) {
+        @include breakpoint-down(mobile) {
           margin-right: 2rem;
         }
       }
@@ -100,10 +100,10 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 3rem;
-      @include breakpoint-down(medium) {
+      @include breakpoint-down(tab) {
         grid-template-columns: repeat(2, 1fr);
       }
-      @include breakpoint-down(small) {
+      @include breakpoint-down(mobile) {
         grid-template-columns: repeat(1, 1fr);
       }
     }
@@ -123,7 +123,7 @@
         font-weight: 500;
         margin-bottom: 5rem;
         text-transform: uppercase;
-        @include breakpoint-down(small) {
+        @include breakpoint-down(mobile) {
           margin-bottom: 2rem;
         }
       }
